customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Agent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Agent_Mobile__c</fullName>
    <label>Agent Mobile</label>
    <type>Phone</type>
</CustomField>