customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Agent_Name__c</fullName>
    <description>For Call Anchor app to store the name of the agent who handled the call.</description>
    <label>Agent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>