customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Call_Id__c</fullName>
    <description
  >For Call Anchor app to prevent duplicate Task creation.</description>
    <label>Call ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>