customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Call_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Call_Started_At__c</fullName>
    <label>Call Started At</label>
    <description>For Call Anchor app to store the date and time the call started.</description>
    <type>DateTime</type>
</CustomField>