customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Call_Type__c</fullName>
    <label>Call Type</label>
    <description>For Call Anchor app to store call type.</description>
    <length>100</length>
    <type>Text</type>
</CustomField>