customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Callback_Scheduled_At__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Callback_Scheduled_At__c</fullName>
    <description>This field is for Call Anchor purpose.</description>
    <label>Callback scheduled</label>
    <type>DateTime</type>
</CustomField>