customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Disposition__c</fullName>
    <label>Disposition</label>
    <description>For Call Anchor app to add disposition.</description>
    <length>255</length>
    <type>Text</type>
</CustomField>