customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Disposition_Note__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Disposition_Note__c</fullName>
    <label>Disposition Note</label>
    <description>For Call Anchor app to store disposition note.</description>
    <type>TextArea</type>
</CustomField>