customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Duration_Seconds__c</fullName>
    <label>Duration Seconds</label>
    <description>For Call Anchor app to store duration seconds.</description>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>