customers/utkarsh-dev-sf/main/default/objects/Activity/fields/Call_Anchor_Recording_Url__c.field-meta.xml
<CustomField>
    <fullName>Call_Anchor_Recording_Url__c</fullName>
    <description>For Call Anchor app to store recording url.</description>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>