customers/utkarsh-dev-sf/main/default/objects/Activity/listViews/AllActivities.listView-meta.xml
<ListView>
    <fullName>AllActivities</fullName>
    <filterScope>Team</filterScope>
    <label>All Activities</label>
</ListView>