customers/utkarsh-dev-sf/main/default/objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <filterScope>Mine</filterScope>
    <label>My Activities</label>
</ListView>